# ocr-optimizer

./: README.md  REPORT.md  config.yaml  pyproject.toml
ocr_optimizer/: __init__.py  cli.py  config.py  cropper.py  merge.py  ocr_client.py  pipeline.py  preprocessing.py  trainer.py
